--- a/css/styles.css
+++ b/css/styles.css
@@ -740,13 +740,15 @@ section.container-card{
 }
 
 .desplegable-parent .title-menu-footer{
-    font-size: 1.2rem;
+    font-size: .9rem;
     font-weight: 200;
+    letter-spacing: 1.5px;
     text-transform: uppercase;
 }
 
 .desplegable-parent div{
     display: flex;
+    justify-content: flex-end;
     align-items: center;
 }
 
