--- a/css/styles.css
+++ b/css/styles.css
@@ -739,6 +739,12 @@ section.container-card{
     grid-template-columns: 90% 10%;
 }
 
+.cont-title-footer{
+    border: 1px solid white;
+    display: flex;
+    justify-content: flex-start;
+}
+
 .desplegable-parent .title-menu-footer{
     font-size: .9rem;
     font-weight: 200;
